--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "view-design": "^4.7.0",
